# djlabhub-docker

./: .gitignore  .gitmodules  .travis.yml  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/scripts/: build-and-push.sh
.github/workflows/: development.yaml  singleuser-release.yaml
_sources/: index.rst.txt
chain-breaker/: .env  Dockerfile  README.md  docker-compose.yaml  example.env
config/: .env  datajoint_config.json  djlab_config.yaml  pip_requirements.txt
docs/: conf.py
hub/: .gitignore  Dockerfile  docker-compose.yaml  example.env
hub/jupyter-datajoint-extensions/: pyproject.toml
hub/jupyter-datajoint-extensions/src/keycloak_authenticator/: __init__.py  auth.py
legacy/: README.rst
singleuser/: Dockerfile  DockerfileIDE  IDE.Dockerfile  docker-compose.yaml  example.env  setup.py  worker-userdata.yaml
singleuser/jupyter_ec2_provisioner/: .gitignore  MANIFEST.in  pyproject.toml  pyproject.toml.bkp  setup.py
singleuser/jupyter_ec2_provisioner/jupyter_ec2_provisioner/: __init__.py  boto3_utils.py  ec2_provisioner.py  settings.py
singleuser/jupyter_ec2_provisioner/jupyter_ec2_provisioner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
singleuser/jupyter_ec2_provisioner/jupyter_ec2_provisioner/kernel-specs/ec2/: kernel.json
singleuser/jupyter_ec2_provisioner/jupyter_ec2_provisioner/kernel-specs/ec2_python/: kernel.json  worker-userdata-minimal.yaml  worker-userdata.yaml
tests/: main.sh
utilities/: README.md  add_entrypoint.sh  backup.sh  entrypoint.sh
(+31 files in other folders)
