[tool.poetry]
name = "jupyter-datajoint-extensions"
version = "0.1.0"
description = ""
authors = ["Ethan Ho <53266718+ethho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
