[tool.poetry]
name = "jupyter-datajoint-extensions"
version = "0.1.0"
description = ""
authors = ["Ethan Ho <53266718+ethho@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "keycloak_authenticator", from = "src"},
    { include = "jupyterlab_dj_pass_updater", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
